# Algorithmic-Genesis-Enterprise-Research-Platform

./: README.md
algorithmic_genesis_enterprise/: .gitignore  BUILD_LOG.txt  BUILD_LOG_ALGORITHM_SYNTHESIS.txt  BUILD_LOG_ENTERPRISE_SUBSTRATE_EXPANSION.txt  BUILD_LOG_OPENCL_BACKEND_PATCH.txt  BUILD_LOG_WEBGUI_GUIDED_DISCOVERY.txt  CMakeLists.txt  LICENSE  README.md  WHITEPAPER.md
algorithmic_genesis_enterprise/.github/workflows/: ci.yml
algorithmic_genesis_enterprise/docs/: ALGORITHM_SYNTHESIS.md  ALGORITHM_SYNTHESIS_V2.md  ARCHITECTURE.md  BENCHMARK_DESIGN.md  CS_CORE_DISCOVERY.md  GENESIS_DISCOVERY_LAYER.md  ROADMAP.md  ROOT_POLICY_V2.md  SUBSTRATE_EXPANSION.md  WEBGUI_DOMAIN_EVALUATION.md  WEBGUI_GUIDED_DISCOVERY.md  WEBGUI_MULTI_DOMAIN_EVALUATION.md
algorithmic_genesis_enterprise/include/ag/: ag_algorithm.hpp  ag_cli_common.hpp  ag_ea.hpp  ag_error.hpp  ag_expr.hpp  ag_fitness.hpp  ag_formula_parts.hpp  ag_genesis.hpp  ag_json.hpp  ag_opencl.hpp  ag_persist.hpp  ag_rng.hpp  ag_snn.hpp  ag_substrate.hpp
algorithmic_genesis_enterprise/kernels/: random.cl  snn_lif.cl
algorithmic_genesis_enterprise/scripts/: build.sh  smoke.sh  start_webgui.cmd  start_webgui.sh
algorithmic_genesis_enterprise/src/: ag_algorithm.cpp  ag_cli_common.cpp  ag_ea.cpp  ag_expr.cpp  ag_fitness.cpp  ag_formula_parts.cpp  ag_genesis.cpp  ag_json.cpp  ag_opencl.cpp  ag_persist.cpp  ag_rng.cpp  ag_snn.cpp  ag_substrate.cpp  main.cpp
algorithmic_genesis_enterprise/tests/: test_algorithm.cpp  test_ea.cpp  test_expr.cpp  test_formula_parts.cpp  test_genesis.cpp  test_harness.hpp  test_main.cpp  test_persist.cpp  test_rng.cpp  test_snn.cpp  test_substrate.cpp
algorithmic_genesis_enterprise/tools/: ag_inspect_db.py  ag_run.py  analyze_benchmark.py  benchmark.py
algorithmic_genesis_enterprise/webui/: server.py
algorithmic_genesis_enterprise/webui/static/: app.js  index.html  style.css
algorithmic_genesis_enterprise/webui_runs/run_20260516_171657_17436/: guided_archive.jsonl  report.md
algorithmic_genesis_enterprise/webui_runs/run_20260516_171657_17436/exports/: ag_chaotic_map_explorer_0c55ac1bc71d_README.md  ag_chaotic_map_explorer_0c55ac1bc71d_algorithm.cl  ag_chaotic_map_explorer_0c55ac1bc71d_algorithm.hpp  ag_chaotic_map_explorer_0c55ac1bc71d_algorithm.py  test_ag_chaotic_map_explorer_0c55ac1bc71d_algorithm.py
algorithmic_genesis_enterprise/webui_runs/run_20260516_173702_22107/: guided_archive.jsonl  report.md
algorithmic_genesis_enterprise/webui_runs/run_20260516_173702_22107/exports/: ag_chaotic_map_explorer_dc0f1a3431df_README.md  ag_chaotic_map_explorer_dc0f1a3431df_algorithm.cl  ag_chaotic_map_explorer_dc0f1a3431df_algorithm.hpp  ag_chaotic_map_explorer_dc0f1a3431df_algorithm.py  test_ag_chaotic_map_explorer_dc0f1a3431df_algorithm.py
algorithmic_genesis_enterprise/webui_runs/run_20260516_182332_12601/: guided_archive.jsonl  report.md
algorithmic_genesis_enterprise/webui_runs/run_20260516_182332_12601/exports/: ag_sequence_extrapolator_cf5cb9a3f619_README.md  ag_sequence_extrapolator_cf5cb9a3f619_algorithm.cl  ag_sequence_extrapolator_cf5cb9a3f619_algorithm.hpp  test_ag_sequence_extrapolator_cf5cb9a3f619_algorithm.py
triadic_genesis_engine_project/: README.md  VALIDATION.md  pyproject.toml
triadic_genesis_engine_project/docs/: API.md  ARCHITECTURE.md  WHITEPAPER.md
triadic_genesis_engine_project/examples/: sample_series.csv
triadic_genesis_engine_project/outputs/: benchmark.json  result.json
triadic_genesis_engine_project/source_algorithms/: LINEAGE.md  ag_chaotic_map_explorer_0c55ac1bc71d_manifest.json  ag_chaotic_map_explorer_dc0f1a3431df_manifest.json  ag_sequence_extrapolator_cf5cb9a3f619_algorithm.py  ag_sequence_extrapolator_cf5cb9a3f619_manifest.json
triadic_genesis_engine_project/src/triadic_genesis_engine/: __init__.py  cli.py  core.py  webapp.py
triadic_genesis_engine_project/tests/: test_engine.py
