[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triadic-genesis-engine"
version = "0.1.0"
description = "Hybrid project connecting three Algorithmic Genesis discoveries into a new adaptive time-series/stream research engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Algorithmic Genesis Research"}]
license = {text = "Proprietary research prototype"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries"
]

[project.scripts]
triadic-genesis = "triadic_genesis_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
